第二版拉通

--- a/app.toml
+++ b/app.toml
@@ -65,7 +65,7 @@ input_file = 'data\部级&宁夏知识库专项调优.xlsx'                # 输
 output_file = 'data\部级&宁夏知识库专项调优_output.xlsx'  # 输出结果文件路径（Excel格式）
 
 # 知识检索配置
-knowledge_num = 10                   # 检索知识条数，最大10个，用于问答时从知识库中检索相关文档
+knowledge_num = 10                   # 检索知识条数，范围1-50，用于问答时从知识库中检索相关文档
 
 # ===========================================
 # 讯飞星火大模型配置部分
