--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.3.1",
     "pyinstaller>=6.14.2",
     "toml>=0.10.2",
+    "pyyaml>=6.0.0",
     "websockets>=15.0.1",
 ]
 
