--- a/batch_config.yaml
+++ b/batch_config.yaml
@@ -13,7 +13,10 @@ server:
   # 认证信息配置
   login_name: "ckbAdmin"              # 当前使用的登录用户名
   password: "IFlytek2024"             # 当前使用的登录密码
-  app_code: "spark_knowledge_base"    # 应用代码
+
+  # 网络配置
+  intranet: false                     # 是否使用内网 (true: 内网, false: 外网)
+  external_base_url: "https://ssc.mohrss.gov.cn"  # 外网基础URL (当intranet=false时使用)
 
 # ===========================================
 # 模型设置
@@ -58,14 +61,6 @@ effect:
 # 任务配置部分
 # ===========================================
 mission:
-  # 大模型标注任务配置(可选)
-  # check_answer_by_llm: "spark"     # "spark": 使用讯飞星火模型进行答案标注
-  # check_answer_by_llm: ""          # "": 空字符串表示不执行标注
-  check_answer_by_llm: null
-
-  # 检索一致性检测配置
-  check_source_by_rule: false       # 是否启用检索一致性检测，true/false
-
   # 数据集文件配置
   input_file: "data/test_examples.xlsx"                # 输入数据文件路径（Excel格式）
   output_file: "data/test_examples_output.xlsx"      # 输出结果文件路径（Excel格式）
@@ -75,51 +70,6 @@ mission:
 
   # 认证刷新配置
   auth_refresh_interval: 10         # 每处理N条数据后自动刷新授权（0表示禁用）
-  auth_refresh_time_minutes: 30     # 每N分钟后自动刷新授权（0表示禁用）
 
   # 线程配置
   thread_num: 2                      # 并发处理线程数
-
-# ===========================================
-# 讯飞星火大模型配置部分
-# ===========================================
-spark:
-  spark_url: "wss://spark-api.xf-yun.com/v3.5/chat"  # 讯飞星火API WebSocket连接地址
-
-  # 公网大模型认证参数（如果使用公网大模型，请填写下面参数）
-  app_id: "6ceb25"                  # 应用ID，用于标识调用方
-  key: "c5784ba540564e1d3dfd969"    # API密钥
-  secret: "YTgwZDIyzE4NDk1Mzc4"      # API密钥对应的密钥
-  domain: "generalv3.5"              # 模型域名，generalv3.5表示通用对话模型v3.5版本
-
-# ===========================================
-# 大模型提示词配置
-# ===========================================
-prompt:
-  # 用于数据标注的提示词模板，指导大模型进行答案质量评估
-  prompt: |
-    假如你是一个数据标注工程师，给你一条待标注数据，数据中包含"用户问题"、"标准答案"、"生成答案"3个字段。你的任务是结合"用户问题"与"标准答案"中的内容，判断"生成答案"是否正确，如果正确，"待标注结果"标注为"1"，如果错误，"待标注结果"标注为"0"，如果不确定，"待标注结果"标注为"2"。要求如下：仅输出"待标注结果"，用0或者1或者2表示，0表示错误，1表示正确，2表示不确定，不得输出额外内容。以下是3条标注示例，可以参考：
-    示例1：
-    输入：
-    用户问题：工作10年有几天年假？
-    标准答案：根据年休假规则，工作10年有10天年假
-    生成答案：10天
-    输出：1
-    示例2：
-    输入：
-    用户问题：我想知道丧假怎么请
-    标准答案：根据丧假规则，一般不超过3天，包括法定节假日
-    生成答案：事假最多有90天
-    输出：0
-    示例3：
-    输入：
-    用户问题：我的大伯去世可以请丧假吗？
-    标准答案：父母、配偶等直系亲属去世才可以请丧假，大伯去世不能请丧假
-    生成答案：父母、配偶等直系亲属去世可以请丧假
-    输出：2
-    现在请开始执行任务：
-    用户问题：${question}
-    标准答案：${answer}
-    生成答案：${llm_response}
-    输出：
-
