--- a/batch_config.yaml
+++ b/batch_config.yaml
@@ -82,3 +82,24 @@ mission:
 
   # 线程配置
   thread_num: 2                      # 并发处理线程数
+
+# ===========================================
+# 日志配置部分
+# ===========================================
+logging:
+  # 日志目录
+  log_dir: "logs"                     # 日志文件存储目录
+  
+  # 日志级别配置
+  console_level: "INFO"               # 控制台输出日志级别
+  file_level: "DEBUG"                 # 文件日志级别（通常设置为DEBUG以记录所有日志）
+  root_level: "DEBUG"                 # 根日志级别（全局最低门槛）
+  root_log_level: "INFO"              # 根日志文件级别（当启用双文件日志时）
+  
+  # 日志文件配置
+  log_filename_prefix: "ckb_tool_api"  # 主日志文件前缀（生成 ckb_qa_tool_api.log）
+  root_log_filename_prefix: "root"    # 根日志文件前缀（生成 root.log）
+  use_timestamp: false                # 是否在日志文件名中使用时间戳
+  
+  # 双文件日志配置
+  enable_dual_file_logging: true      # 是否启用双文件日志（root.log + 详细日志）
