--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ckb-qa-tool-v0-1-1"
+name = "ckb-qa-tool"
 version = "0.1.1"
 description = "Integrated batch processing, data analysis, and metrics analysis tool for CKB QA"
 readme = "README.md"
@@ -14,6 +14,7 @@ dependencies = [
     # Web framework and API
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
+    "gunicorn>=23.0.0",
     "pydantic>=2.0.0",
     
     # Data processing
